syntax = "proto3";
package protobuf;

import "google/protobuf/timestamp.proto";

enum MessageType {
    PEER_UPDATE = 0;
    MESSAGE = 1;
}

message MeshIMMessage {
    MessageType messageType = 1;
    PeerUpdate peerUpdate = 2;
    Message message = 3;
}

message PeerUpdate{
    string userName =1;
    int32 avatarId =2;
}
message Message{
    string message =1;
    google.protobuf.Timestamp time=2;
}